--- a/_data/projects/openhtf.yml
+++ b/_data/projects/openhtf.yml
@@ -12,7 +12,7 @@ has_procedures: true
 has_gui: true
 gui_technology: Web
 has_unit_support: true
-unit_library: y
+unit_library: 
 instrument_categories: 
 remarks: 
 collected_by: "@doingbla"
