--- a/_data/projects/ophyd.yml
+++ b/_data/projects/ophyd.yml
@@ -4,7 +4,7 @@ repo_url: https://github.com/NSLS-II/ophyd
 docs_url: http://nsls-ii.github.io/ophyd
 license: 
 project_focus: A hardware abstraction layer
-test_framework: pytest (270)
+test_framework: pytest
 has_hardware_communication: 
 communication_types: 
 transport_layers: 
