--- a/_data/projects/qcodes.yml
+++ b/_data/projects/qcodes.yml
@@ -12,7 +12,7 @@ has_procedures:
 has_gui: false
 gui_technology: 
 has_unit_support: true
-unit_library: y
+unit_library: 
 instrument_categories: 
 remarks: 
 collected_by: 
