--- a/_data/projects/cryostat-gui.yml
+++ b/_data/projects/cryostat-gui.yml
@@ -13,6 +13,6 @@ has_gui: true
 gui_technology: pyQt
 has_unit_support: false
 unit_library: 
-instrument_categories: y
+instrument_categories: yes
 remarks: "currently rather specific, just recently reinvented the wheel..."
 collected_by: 
