--- a/_data/projects/micro-manager.yml
+++ b/_data/projects/micro-manager.yml
@@ -13,6 +13,6 @@ has_gui: true
 gui_technology: java
 has_unit_support: 
 unit_library: 
-instrument_categories: y
+instrument_categories: yes
 remarks: "[this repo](https://github.com/micro-manager/futureMMCore) describes ongoing plans for an overhaul of the hardware interface side"
 collected_by: 
