--- a/_data/projects/pymeasure.yml
+++ b/_data/projects/pymeasure.yml
@@ -4,7 +4,7 @@ repo_url: https://github.com/ralph-group/pymeasure
 docs_url: http://pymeasure.readthedocs.io/en/latest/
 license: MIT
 project_focus: 
-test_framework: pytest(62)
+test_framework: pytest
 has_hardware_communication: true
 communication_types: 
 transport_layers: Serial, GPIB-USB, VISA
