--- a/_data/projects/measuresequences.yml
+++ b/_data/projects/measuresequences.yml
@@ -5,7 +5,6 @@ docs_url:
 license: 
 project_focus: Abstract software Sequence parsing/running scheme
 test_framework: 
-has_hardware_communication: false
 communication_types: 
 transport_layers: 
 has_procedures: true
@@ -14,5 +13,5 @@ gui_technology: pyQt
 has_unit_support: 
 unit_library: 
 instrument_categories: 
-remarks: 
+remarks: "Does not do hardware communication"
 collected_by: 
