--- a/_config.yml
+++ b/_config.yml
@@ -39,7 +39,8 @@ plugins:
 # Excluded items can be processed by explicitly listing the directories or
 # their entries' file path in the `include:` list.
 #
-# exclude:
+exclude:
+  - obsolete/
 #   - .sass-cache/
 #   - .jekyll-cache/
 #   - gemfiles/
