--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ title: Python lab automation landscape catalog
 email: bilderbuchi@phononoia.at
 description: >- # this means to ignore newlines until "baseurl:"
   A catalog/overview of Python packages in the area of lab automation.
-baseurl: "" # the subpath of your site, e.g. /blog
+baseurl: "/python-lab-automation-landscape" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 github_username:  bilderbuchi
 
