Update for instrumentKit.

--- a/_data/projects/instrumentkit.yml
+++ b/_data/projects/instrumentkit.yml
@@ -11,7 +11,7 @@ has_procedures: false
 has_gui: false
 gui_technology: 
 has_unit_support: true
-unit_library: quantities (soon pint)
+unit_library: pint
 instrument_categories: yes
 remarks: 
 collected_by: "@bilderbuchi"
