Avoid mapping values.

--- a/_data/projects/ssmdevices.yml
+++ b/_data/projects/ssmdevices.yml
@@ -2,7 +2,7 @@ name: ssmdevices
 description: a library of python instrument driver wrappers implemented in labbench (mostly for RF and communication testing)
 repo_url: https://github.com/usnistgov/ssmdevices
 docs_url: https://pages.nist.gov/ssmdevices
-license: NIST: https://github.com/usnistgov/ssmdevices/blob/master/LICENSE.md
+license: NIST (https://github.com/usnistgov/ssmdevices/blob/master/LICENSE.md)
 project_focus: Library of instrument and lab equipment driver wrappers, mostly dealing with RF and communication
 test_framework: pytest
 communication_types: visa, telnet, subprocesses, custom API
