Fix problem with collected_by value
Needs to be a string if starting with @.

--- a/_data/projects/atomize.yml
+++ b/_data/projects/atomize.yml
@@ -14,4 +14,4 @@ has_unit_support:
 unit_library: 
 instrument_categories: (many)
 remarks: 
-collected_by: @FilipDominec
+collected_by: "@FilipDominec"
